start minor refactoring for upload functionality
uniform logger, clear controller endpoints